--- a/lab-04_1_multivariable_linear_regression.ipynb
+++ b/lab-04_1_multivariable_linear_regression.ipynb
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7feda81dd8f0>"
+       "<torch._C.Generator at 0x7fd26ff8afb0>"
       ]
      },
      "execution_count": 2,
@@ -129,16 +129,16 @@
      "output_type": "stream",
      "text": [
       "Epoch    0/1000 w1: 0.294 w2: 0.297 w3: 0.297 b: 0.003 Cost: 29661.800781\n",
-      "Epoch  100/1000 w1: 0.674 w2: 0.676 w3: 0.676 b: 0.008 Cost: 1.563628\n",
-      "Epoch  200/1000 w1: 0.679 w2: 0.677 w3: 0.677 b: 0.008 Cost: 1.497595\n",
-      "Epoch  300/1000 w1: 0.684 w2: 0.677 w3: 0.677 b: 0.008 Cost: 1.435044\n",
-      "Epoch  400/1000 w1: 0.689 w2: 0.678 w3: 0.678 b: 0.008 Cost: 1.375726\n",
-      "Epoch  500/1000 w1: 0.694 w2: 0.678 w3: 0.678 b: 0.009 Cost: 1.319497\n",
+      "Epoch  100/1000 w1: 0.674 w2: 0.676 w3: 0.676 b: 0.008 Cost: 1.563634\n",
+      "Epoch  200/1000 w1: 0.679 w2: 0.677 w3: 0.677 b: 0.008 Cost: 1.497603\n",
+      "Epoch  300/1000 w1: 0.684 w2: 0.677 w3: 0.677 b: 0.008 Cost: 1.435026\n",
+      "Epoch  400/1000 w1: 0.689 w2: 0.678 w3: 0.678 b: 0.008 Cost: 1.375730\n",
+      "Epoch  500/1000 w1: 0.694 w2: 0.678 w3: 0.678 b: 0.009 Cost: 1.319503\n",
       "Epoch  600/1000 w1: 0.699 w2: 0.679 w3: 0.679 b: 0.009 Cost: 1.266215\n",
-      "Epoch  700/1000 w1: 0.704 w2: 0.679 w3: 0.679 b: 0.009 Cost: 1.215703\n",
-      "Epoch  800/1000 w1: 0.709 w2: 0.679 w3: 0.679 b: 0.009 Cost: 1.167810\n",
-      "Epoch  900/1000 w1: 0.713 w2: 0.680 w3: 0.680 b: 0.009 Cost: 1.122429\n",
-      "Epoch 1000/1000 w1: 0.718 w2: 0.680 w3: 0.680 b: 0.009 Cost: 1.079390\n"
+      "Epoch  700/1000 w1: 0.704 w2: 0.679 w3: 0.679 b: 0.009 Cost: 1.215693\n",
+      "Epoch  800/1000 w1: 0.709 w2: 0.679 w3: 0.679 b: 0.009 Cost: 1.167821\n",
+      "Epoch  900/1000 w1: 0.713 w2: 0.680 w3: 0.680 b: 0.009 Cost: 1.122419\n",
+      "Epoch 1000/1000 w1: 0.718 w2: 0.680 w3: 0.680 b: 0.009 Cost: 1.079375\n"
      ]
     }
    ],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,34 +353,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch    0/20 Cost: 24222.882812\n",
-      "Epoch    1/20 Cost: 7594.522461\n",
-      "Epoch    2/20 Cost: 2382.413818\n",
-      "Epoch    3/20 Cost: 748.693359\n",
-      "Epoch    4/20 Cost: 236.608414\n",
-      "Epoch    5/20 Cost: 76.096085\n",
-      "Epoch    6/20 Cost: 25.783018\n",
-      "Epoch    7/20 Cost: 10.011941\n",
-      "Epoch    8/20 Cost: 5.067685\n",
-      "Epoch    9/20 Cost: 3.517138\n",
-      "Epoch   10/20 Cost: 3.030346\n",
-      "Epoch   11/20 Cost: 2.876979\n",
-      "Epoch   12/20 Cost: 2.828109\n",
-      "Epoch   13/20 Cost: 2.812019\n",
-      "Epoch   14/20 Cost: 2.806184\n",
-      "Epoch   15/20 Cost: 2.803611\n",
-      "Epoch   16/20 Cost: 2.801988\n",
-      "Epoch   17/20 Cost: 2.800694\n",
-      "Epoch   18/20 Cost: 2.799501\n",
-      "Epoch   19/20 Cost: 2.798365\n",
-      "Epoch   20/20 Cost: 2.797212\n"
+      "Epoch    0/20 Cost: 31667.597656\n",
+      "Epoch    1/20 Cost: 9926.266602\n",
+      "Epoch    2/20 Cost: 3111.513672\n",
+      "Epoch    3/20 Cost: 975.451355\n",
+      "Epoch    4/20 Cost: 305.908539\n",
+      "Epoch    5/20 Cost: 96.042488\n",
+      "Epoch    6/20 Cost: 30.260750\n",
+      "Epoch    7/20 Cost: 9.641701\n",
+      "Epoch    8/20 Cost: 3.178671\n",
+      "Epoch    9/20 Cost: 1.152871\n",
+      "Epoch   10/20 Cost: 0.517863\n",
+      "Epoch   11/20 Cost: 0.318801\n",
+      "Epoch   12/20 Cost: 0.256388\n",
+      "Epoch   13/20 Cost: 0.236821\n",
+      "Epoch   14/20 Cost: 0.230660\n",
+      "Epoch   15/20 Cost: 0.228719\n",
+      "Epoch   16/20 Cost: 0.228095\n",
+      "Epoch   17/20 Cost: 0.227880\n",
+      "Epoch   18/20 Cost: 0.227799\n",
+      "Epoch   19/20 Cost: 0.227762\n",
+      "Epoch   20/20 Cost: 0.227732\n"
      ]
     }
    ],
@@ -398,14 +398,13 @@
     "optimizer = optim.SGD(model.parameters(), lr=1e-5)\n",
     "\n",
     "nb_epochs = 20\n",
-    "\n",
     "for epoch in range(nb_epochs+1):\n",
     "    \n",
     "    # H(x) 계산\n",
-    "    y_pred = model(x_train)\n",
+    "    prediction = model(x_train)\n",
     "    \n",
     "    # cost 계산\n",
-    "    cost = F.mse_loss(y_pred, y_train)\n",
+    "    cost = F.mse_loss(prediction, y_train)\n",
     "    \n",
     "    # cost로 H(x) 개선\n",
     "    optimizer.zero_grad()\n",
@@ -417,33 +416,6 @@
     "        epoch, nb_epochs, cost.item()\n",
     "    ))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<generator object Module.parameters at 0x7fed940e7780>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.parameters()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -462,11 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< Updated upstream
-   "version": "3.6.7"
-=======
    "version": "3.6.9"
->>>>>>> Stashed changes
   }
  },
  "nbformat": 4,
