--- a/lab-05_logistic_classification.ipynb
+++ b/lab-05_logistic_classification.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,16 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fba8c0af9f0>"
+       "<torch._C.Generator at 0x106951ed0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
       "        [0.5000],\n",
       "        [0.5000],\n",
       "        [0.5000],\n",
-      "        [0.5000]], grad_fn=<MulBackward0>)\n",
+      "        [0.5000]], grad_fn=<MulBackward>)\n",
       "torch.Size([6, 1])\n"
      ]
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "tensor([0.6931], grad_fn=<NegBackward>)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
        "tensor(0.6931, grad_fn=<BinaryCrossEntropyBackward>)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_data = [[1, 2], [2, 3], [3, 1], [4, 3], [5, 3], [6, 2]]\n",
+    "y_data = [[0], [0], [0], [1], [1], [1]]\n",
+    "x_train = torch.FloatTensor(x_data)\n",
+    "y_train = torch.FloatTensor(y_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -538,11 +550,6 @@
     }
    ],
    "source": [
-    "x_data = [[1, 2], [2, 3], [3, 1], [4, 3], [5, 3], [6, 2]]\n",
-    "y_data = [[0], [0], [0], [1], [1], [1]]\n",
-    "x_train = torch.FloatTensor(x_data)\n",
-    "y_train = torch.FloatTensor(y_data)\n",
-    "\n",
     "# 모델 초기화\n",
     "W = torch.zeros((2, 1), requires_grad=True)\n",
     "b = torch.zeros(1, requires_grad=True)\n",
@@ -578,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -600,11 +607,6 @@
     }
    ],
    "source": [
-    "x_data = [[1, 2], [2, 3], [3, 1], [4, 3], [5, 3], [6, 2]]\n",
-    "y_data = [[0], [0], [0], [1], [1], [1]]\n",
-    "x_train = torch.FloatTensor(x_data)\n",
-    "y_train = torch.FloatTensor(y_data)\n",
-    "\n",
     "# 모델 초기화\n",
     "W = torch.zeros((2, 1), requires_grad=True)\n",
     "b = torch.zeros(1, requires_grad=True)\n",
@@ -639,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -687,23 +689,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([759, 8]) torch.Size([759, 1])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(x_train.shape, y_train.shape)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -712,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +711,7 @@
       "Epoch   40/100 Cost: 0.507066\n",
       "Epoch   50/100 Cost: 0.498539\n",
       "Epoch   60/100 Cost: 0.492549\n",
-      "Epoch   70/100 Cost: 0.488208\n",
+      "Epoch   70/100 Cost: 0.488209\n",
       "Epoch   80/100 Cost: 0.484985\n",
       "Epoch   90/100 Cost: 0.482543\n",
       "Epoch  100/100 Cost: 0.480661\n"
@@ -768,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,30 +971,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = BinaryClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch    0/100 Cost: 0.691402 Accuracy 55.47%\n",
-      "Epoch   10/100 Cost: 0.576109 Accuracy 66.93%\n",
-      "Epoch   20/100 Cost: 0.541669 Accuracy 72.33%\n",
-      "Epoch   30/100 Cost: 0.521164 Accuracy 76.28%\n",
-      "Epoch   40/100 Cost: 0.508067 Accuracy 76.55%\n",
-      "Epoch   50/100 Cost: 0.499238 Accuracy 77.08%\n",
-      "Epoch   60/100 Cost: 0.493040 Accuracy 77.08%\n",
-      "Epoch   70/100 Cost: 0.488553 Accuracy 77.08%\n",
-      "Epoch   80/100 Cost: 0.485224 Accuracy 76.42%\n",
-      "Epoch   90/100 Cost: 0.482704 Accuracy 76.42%\n",
-      "Epoch  100/100 Cost: 0.480765 Accuracy 76.81%\n"
+      "Epoch    0/100 Cost: 0.704829 Accuracy 45.72%\n",
+      "Epoch   10/100 Cost: 0.572391 Accuracy 67.59%\n",
+      "Epoch   20/100 Cost: 0.539563 Accuracy 73.25%\n",
+      "Epoch   30/100 Cost: 0.520042 Accuracy 75.89%\n",
+      "Epoch   40/100 Cost: 0.507561 Accuracy 76.15%\n",
+      "Epoch   50/100 Cost: 0.499125 Accuracy 76.42%\n",
+      "Epoch   60/100 Cost: 0.493177 Accuracy 77.21%\n",
+      "Epoch   70/100 Cost: 0.488846 Accuracy 76.81%\n",
+      "Epoch   80/100 Cost: 0.485612 Accuracy 76.28%\n",
+      "Epoch   90/100 Cost: 0.483146 Accuracy 76.55%\n",
+      "Epoch  100/100 Cost: 0.481234 Accuracy 76.81%\n"
      ]
     }
    ],
    "source": [
-    "model = BinaryClassifier()\n",
-    "\n",
     "# optimizer 설정\n",
     "optimizer = optim.SGD(model.parameters(), lr=1)\n",
     "\n",
@@ -1036,13 +1028,6 @@
     "            epoch, nb_epochs, cost.item(), accuracy * 100,\n",
     "        ))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1061,11 +1046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< Updated upstream
-   "version": "3.6.7"
-=======
    "version": "3.6.9"
->>>>>>> Stashed changes
   }
  },
  "nbformat": 4,
