--- a/lab-06_2_fancy_softmax_classification.ipynb
+++ b/lab-06_2_fancy_softmax_classification.ipynb
@@ -42,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x2b156d52dab0>"
+       "<torch._C.Generator at 0x7fd63811f410>"
       ]
      },
      "execution_count": 2,
@@ -157,7 +157,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(1.4689, grad_fn=<MeanBackward0>)"
+       "tensor(1.4689, grad_fn=<MeanBackward1>)"
       ]
      },
      "execution_count": 6,
@@ -461,11 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< Updated upstream
-   "version": "3.6.7"
-=======
    "version": "3.6.9"
->>>>>>> Stashed changes
   }
  },
  "nbformat": 4,
